more edu content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 .workPlace {float: left;}
 .workDuration {float: right;}
 .workTitle {clear: both;border-bottom: 1px solid;}
+.eduPlace {float: left;}
+.eduDuratoion {float: right;}
+.eduTitle {clear: both;border-bottom: 1px solid;}
 </style>
  </head>
 <body>
@@ -100,16 +103,20 @@
     </div>
     <div id="collapseFour" class="panel-collapse collapse">
       <div class="panel-body">
-		<div class="resumeEntry">
-			<div class="workPlace">Jackson State University, Jackson MS</div>
-			<div class="workDuration">May 2013</div>
-			<div class="workTitle">Master Degree, Computer Science</div>
+		<div class="eduEntry">
+			<div class="eduPlace">Jackson State University, Jackson MS</div>
+			<div class="eduDuration">May 2013</div>
+			<div class="eduTitle">Master Degree, Computer Science</div>
 		</div>
-		<div class="resumeEntry">
-			<div class="workPlace">Jackson State University, Jackson MS</div>
-			<div class="workDuration">May 2000</div>
-			<div class="workTitle">Bachelor of Science, Meteorology (Summa Cum Laude)</div>
-			
+		<div class="eduEntry">
+			<div class="eduPlace">Jackson State University, Jackson MS</div>
+			<div class="eduDuration">May 2000</div>
+			<div class="eduTitle">Bachelor of Science, Meteorology (Summa Cum Laude)</div>			
+		</div>
+		<div class="eduEntry">
+			<div class="eduPlace">Hinds Community College, Raymond MS</div>
+			<div class="eduDuration">Aug. 1997</div>
+			<div class="eduTitle">Associate Arts, Engineering</div>			
 		</div>
 	  </div>
     </div>
