mode edu formatting

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 .workPlace {float: left;}
 .workDuration {float: right;}
 .workTitle {clear: both;border-bottom: 1px solid;}
-.eduPlace {float: left;}
+.eduPlace {float: center;}
 .eduDuratoion {float: right;}
-.eduTitle {clear: both;border-bottom: 1px solid;}
+.eduTitle {float: left; border-bottom: 1px solid;}
 </style>
  </head>
 <body>
@@ -73,7 +73,7 @@
 			<div class="workTitle">Summer Intern</div>
 			<ul>
 			   <li>Trained in High Performance Computing (HPC), Message Passing Instruction (MPI) and web development procedures.</li>
-			   <li>Researched anomalies in numerical weather prediction models by comparing MM5 output to other models’ (ETA, RUC, NGM, etc.).</li> 
+			   <li>Researched anomalies in numerical weather prediction models by comparing MM5 output to other models' (ETA, RUC, NGM, etc.).</li> 
  			</ul>
 	  </div>
     </div>
@@ -103,21 +103,11 @@
     </div>
     <div id="collapseFour" class="panel-collapse collapse">
       <div class="panel-body">
-		<div class="eduEntry">
-			<div class="eduPlace">Jackson State University, Jackson MS</div>
-			<div class="eduDuration">May 2013</div>
-			<div class="eduTitle">Master Degree, Computer Science</div>
-		</div>
-		<div class="eduEntry">
-			<div class="eduPlace">Jackson State University, Jackson MS</div>
-			<div class="eduDuration">May 2000</div>
-			<div class="eduTitle">Bachelor of Science, Meteorology (Summa Cum Laude)</div>			
-		</div>
-		<div class="eduEntry">
-			<div class="eduPlace">Hinds Community College, Raymond MS</div>
-			<div class="eduDuration">Aug. 1997</div>
-			<div class="eduTitle">Associate Arts, Engineering</div>			
-		</div>
+	  <ul>
+		<li>Jackson State University, Master Degree, Computer Science, Jackson MS, May 2013.</li>
+		<li>Jackson State University, Bachelor of Science, Jackson MS, May 2000.</li>
+		<li>Hinds Community College, Associate Arts, Raymond MS, Aug 1997.</li>
+	  </ul>
 	  </div>
     </div>
   </div>
