--- a/index.html
+++ b/index.html
@@ -89,8 +89,18 @@
     </div>
     <div id="collapseThree" class="panel-collapse collapse">
       <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
+			<div class="resumeEntry">
+			<div class="workPlace">Jackson State University, Jackson MS</div>
+			<div class="workDuration">Mar 2006 - Present</div>
+			<div class="workTitle">Database Administration</div>
+			<ul>
+				<li>Planed, configured, installed, deployed, supported and managed ORACLE 11, 10, Mysql, MSSQL servers.</li>
+				<li>Developed all e-mail policies and procedures currently in use, at the University.</li>
+				<li>Developed integration scripts for automation of account provisioning and self-service. User data taken from SCT Benner (Ellucian) with Oracle backend.</li>
+				<li>Successfully led a campus wide project and team to migrate the e-mail systems to Google Apps For Your Domain (GAFYD), saving the institution hundreds of thousands of dollars in datacenter fees, power, cooling, software licenses and hardware support contracts while addressing disaster recovery, high availability, business continuity, data ownership and storage concerns. </li>
+			</ul>
+	    </div>
+	  </div>
     </div>
   </div>
 
@@ -104,7 +114,7 @@
         </a>
       </h4>
     </div>
-    <div id="collapseFour" class="panel-collapse collapse" color="blue">
+    <div id="collapseFour" class="panel-collapse collapse">
       <div class="panel-body">
         Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
       </div>
