--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 			<div class="workTitle">Database Administration</div>
 			<ul>
 				<li>Planed, configured, installed, deployed, supported and managed ORACLE 11, 10, Mysql, MSSQL servers.</li>
-				<li>Developed all e-mail policies and procedures currently in use, at the University.</li>
-				<li>Developed integration scripts for automation of account provisioning and self-service. User data taken from SCT Benner (Ellucian) with Oracle backend.</li>
-				<li>Successfully led a campus wide project and team to migrate the e-mail systems to Google Apps For Your Domain (GAFYD), saving the institution hundreds of thousands of dollars in datacenter fees, power, cooling, software licenses and hardware support contracts while addressing disaster recovery, high availability, business continuity, data ownership and storage concerns. </li>
+				<li>Participated in all aspects of SCT BANNER administration and support.</li>
+				<li>Participated in all aspects of various integration projects (Google, Active Directory, ORACLE, etc.).</li>
+				<li>As assigned, served as liaison and lead between InformationTechnology and various campus units to identify and solve their technological needs (Richard Wright Center, Department of Events, Department of Computer Science, etc.).</li>
 			</ul>
 	    </div>
 	  </div>
