added more experience content

--- a/index.html
+++ b/index.html
@@ -92,12 +92,27 @@
 			<div class="resumeEntry">
 			<div class="workPlace">Jackson State University, Jackson MS</div>
 			<div class="workDuration">Mar 2006 - Present</div>
-			<div class="workTitle">Database Administration</div>
+			<div class="workTitle">Database and E-mail Administration</div>
 			<ul>
 				<li>Planed, configured, installed, deployed, supported and managed ORACLE 11, 10, Mysql, MSSQL servers.</li>
 				<li>Participated in all aspects of SCT BANNER administration and support.</li>
 				<li>Participated in all aspects of various integration projects (Google, Active Directory, ORACLE, etc.).</li>
 				<li>As assigned, served as liaison and lead between InformationTechnology and various campus units to identify and solve their technological needs (Richard Wright Center, Department of Events, Department of Computer Science, etc.).</li>
+				<li>Administered Unix/Windows/VMWare servers.</li>
+				<li>Developed, implemented and enforced cyber security principles and strategies.</li>
+				<li>Led several eDiscovery projects.</li>
+				<li>Deployed, integrated and managed several Google Apps domains.</li>
+				<li>Implemented Sendmail, cyrus-imapd, ssl, certs, antispam and webmail servers.</li>
+				<li>Managed multiple e-mail domains (up to 100K mailboxes and 11 virtual and physical servers).</li>
+				<li>Developed and implemented migration, disaster recovery, high availability, business continuity strategies for all in-house e-mail systems.</li>
+				<li>Managed several listservs including Mailman.</li>
+				<li>Developed virtual and physical backup strategies (IBM Tivoli, TSM, Amazon S3, etc.).</li>
+				<li>Developed various bash, PHP, Google API and Perl scripts to allow integration, and self-service of various systems.</li>
+				<li>Provided all levels (server, client, user) of support for various systems, (E-mail, Active Directory, Banner, etc.), including acting as a liaison between internal and external entities and JSU's Information Technology to solve highly complex issues.</li>
+				<li>Developed, deployed and enforced policies for various systems (specially e-mail).</li>
+				<li>Trained several employees and students in the proper and effective use of various systems (Active Directory, Banner, E-mail, Conference, etc.).</li>
+				<li>As part of the support efforts, I have used several remote assistance tools (bomgar, logmein, Microsoft Remote Desktop).</li>
+
 			</ul>
 	    </div>
 	  </div>
