added more experience content

--- a/index.html
+++ b/index.html
@@ -115,6 +115,21 @@
 
 			</ul>
 	    </div>
+		<div class="resumeEntry">
+			<div class="workPlace">Jackson State University, Jackson MS</div>
+			<div class="workDuration">Jun 2000 - Feb 2006</div>
+			<div class="workTitle">Technical and Systems Administrator</div>
+			<ul>
+				<li>Led all aspects of the Meteorology Program's servers (various architectures X86, Sparc), workstations and PCs hardware/software/peripherals and supplies purchase, deployment, support, and administration.</li>
+				<li>Led all aspects of the Meteorology Program's web and databases development, deployment and administration.</li>
+				<li>Led all aspects of the Meteorology Program's grants technical support.</li>
+				<li>Trained students, coworkers and research personal in the use of PC/Server hardware/software and cross-platform procedures.</li>
+				<li>Supported numerical weather prediction (MM5/COAMPS) modeling, visualization, output and classroom integration via Distance learning website (http://weather.jsums.edu).</li>
+				<li>Managed several student workers and other employees by providing needed tools to ensure desired results and products (research papers, data set validations, timely results, etc.).</li>
+				<li>Provided general support for office equipment.</li>
+				<li>Developed and enforced policies for proper and efficient computer lab/office conduct and usage.</li>
+			</ul>
+	    </div>
 	  </div>
     </div>
   </div>
