added more content to experience

--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
 				<li>Developed and enforced policies for proper and efficient computer lab/office conduct and usage.</li>
 			</ul>
 	    </div>
+		<div class="resumeEntry">
+			<div class="workPlace">Army High Performance Computer Research Center (AHPCRC), Atlanta, GA and Minneapolis MN</div>
+			<div class="workDuration">Jun 1999 – Aug 1999</div>
+			<div class="workTitle">Intern</div>
+			<ul>
+				<li>Used C, HTML, and MPI to solve Physics problems.</li>
+				<li>Compared MM5 output to other model s (ETA, RUC, NGM, etc.).</li>
+				<li>Published online results (HTML, Powerpoint) of research projects.</li>
+			</ul>
+	    </div>
 	  </div>
     </div>
   </div>
