created external css file, removed style section

--- a/index.html
+++ b/index.html
@@ -2,17 +2,10 @@
 <html lang="en">
   
 <head>
-<!-- Bootstrap -->
- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<style>
-.workPlace {float: left;}
-.workDuration {float: right;}
-.workTitle {clear: both;border-bottom: 1px solid;}
-.eduPlace {float: center;}
-.eduDuratoion {float: right;}
-.eduTitle {float: left; border-bottom: 1px solid;}
-</style>
- </head>
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="site.css">
+</head>
 <body>
 
 <div class="container">
