edited professional highlights

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="container">
 <div class="page-header">
-  <h2>Rafael Mahecha <small>resourceful!</small></h2>
+  <h2>Rafael Mahecha <small><b>{</b>resourceful!<b>}</b></small></h2>
 </div>
 <div class="panel-group" id="accordion">
   <div class="panel panel-default">
@@ -38,35 +38,18 @@
     <div id="collapseTwo" class="panel-collapse collapse">
       <div class="panel-body">
 		<div class="resumeEntry">
-			<div class="workPlace">Jackson State University, Jackson MS</div>
-			<div class="workDuration">Mar 2006 - Present</div>
-			<div class="workTitle">E-mail Administration</div>
 			<ul>
 				<li>Successfully planned, configured, deployed and managed all in-house distributed e-mail and listserv servers, (11 Dell power edge 2950's with about 50k accounts, running sendmail, cyrus imapd, squirrelmail, sophos puremessage, etc.).</li>				
 				<li>Developed all e-mail policies and procedures currently in use, at the University.</li>
 				<li>Developed integration scripts for automation of account provisioning and self-service. User data taken from SCT Benner (Ellucian) with Oracle backend.</li>
 				<li>Successfully led a campus wide project and team to migrate the e-mail systems to Google Apps For Your Domain (GAFYD), saving the institution hundreds of thousands of dollars in datacenter fees, power, cooling, software licenses and hardware support contracts while addressing disaster recovery, high availability, business continuity, data ownership and storage concerns. </li>
-			</ul>
-	    </div>
-		<div class="resumeEntry">
-			<div class="workPlace">Jackson State University, Jackson MS</div>
-			<div class="workDuration">Jul 2000 - Feb 2006</div>
-			<div class="workTitle">Technical Administrator</div>
-			<ul>
-			   <li>Successfully managed all technical aspects of the Meteorology Program (Department of Physics).</li>
-			   <li>Managed and trained several employees and student workers.</li>
-			   <li>Successfully supported several million dollar NFS and NASA grants.</li>
-			   <li>Collaborated with Principal Investigators in several published research papers.</li>
-			   <li>Successfully addressed technical growth needs of the program; planed, purchased, deployed and managed infrastructure.</li>
- 			</ul>
-		</div>
-		<div class="resumeEntry">
-			<div class="workPlace">ARMY High Performance Computer Research Center (AHPCRC), Atlanta, GA and Minneapolis, MN</div>
-			<div class="workDuration">Jun 1999 - Aug 1999</div>
-			<div class="workTitle">Summer Intern</div>
-			<ul>
-			   <li>Trained in High Performance Computing (HPC), Message Passing Instruction (MPI) and web development procedures.</li>
-			   <li>Researched anomalies in numerical weather prediction models by comparing MM5 output to other models' (ETA, RUC, NGM, etc.).</li> 
+				<li>Successfully managed all technical aspects of the Meteorology Program (Department of Physics).</li>
+				<li>Managed and trained several employees and student workers.</li>
+				<li>Successfully supported several million dollar NFS and NASA grants.</li>
+				<li>Collaborated with Principal Investigators in several published research papers.</li>
+				<li>Successfully addressed technical growth needs of the program; planed, purchased, deployed and managed infrastructure.</li>
+				<li>Trained in High Performance Computing (HPC), Message Passing Instruction (MPI) and web development procedures.</li>
+				<li>Researched anomalies in numerical weather prediction models by comparing MM5 output to other models' (ETA, RUC, NGM, etc.).</li> 
  			</ul>
 	  </div>
     </div>
