added professional education and nested accordion

--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
 				<li>Developed, deployed and enforced policies for various systems (specially e-mail).</li>
 				<li>Trained several employees and students in the proper and effective use of various systems (Active Directory, Banner, E-mail, Conference, etc.).</li>
 				<li>As part of the support efforts, I have used several remote assistance tools (bomgar, logmein, Microsoft Remote Desktop).</li>
-
 			</ul>
 	    </div>
 		<div class="resumeEntry">
@@ -119,9 +118,6 @@
 	  </div>
     </div>
   </div>
-
-
-
 <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
@@ -132,15 +128,26 @@
     </div>
     <div id="collapseFour" class="panel-collapse collapse">
       <div class="panel-body">
+			<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour-a">
+				FEMA, Texas A&M Engineering Extension Service, 2013
+			</a>
+			<div id="collapseFour-a" class="panel-collapse collapse">
+				<ul>
+					<li>Business Information Continuity.</li>
+					<li>Information Security for Everyone.</li>
+					<li>Secure Software.</li>
+				</ul>
+	  
+	  
         Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
+
+
+
+
+
+		</div>
     </div>
   </div>
-
-
-
-
-
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
