more professional edu

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
 		</div>
 		
 		<div class="panel-body">
-			<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour-a">
+			<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour-b">
 				FEMA, Texas A&M Engineering Extension Service, 2013
 			</a>
-			<div id="collapseFour-a" class="panel-collapse collapse">
+			<div id="collapseFour-b" class="panel-collapse collapse">
 				<ul>
 					<li>Business Information Continuity.</li>
 					<li>Information Security for Everyone.</li>
@@ -154,10 +154,10 @@
 		</div>
 		
 		<div class="panel-body">
-			<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour-a">
+			<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour-c">
 				FEMA, Texas A&M Engineering Extension Service, 2013
 			</a>
-			<div id="collapseFour-a" class="panel-collapse collapse">
+			<div id="collapseFour-c" class="panel-collapse collapse">
 				<ul>
 					<li>Business Information Continuity.</li>
 					<li>Information Security for Everyone.</li>
