--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 		
 		<div class="panel-body">
 			<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour-b">
-				FEMA, Texas A&M Engineering Extension Service, 2013
+				JAckson State University,
 			</a>
 			<div id="collapseFour-b" class="panel-collapse collapse">
 				<ul>
@@ -164,12 +164,7 @@
 					<li>Secure Software.</li>
 				</ul>
 			</div>
-		</div>
-		
-		
-		
-		
-		
+		</div>	
     </div>
   </div>
   <div class="panel panel-default">
