--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+Skip to content
+ This repository
+Explore
+Gist
+Blog
+Help
+@rama1200 rama1200
+ 
+ Unwatch 1
+  Star 0
+  Fork 0
+rama1200/rama1200.github.io
+ branch: master  rama1200.github.io/index.html
+@rama1200rama1200 on Mar 21, 2014 more professional edu
+1 contributor
+RawBlameHistory     195 lines (191 sloc)  10.061 kb
 <!DOCTYPE html>
 <html lang="en">
   
@@ -39,6 +55,7 @@
       <div class="panel-body">
 		<div class="resumeEntry">
 			<ul>
+				<li>Joined the General Electric Capital Corporation as a 3rd Party Information Security Analyst.</li>
 				<li>Successfully planned, configured, deployed and managed all in-house distributed e-mail and listserv servers, (11 Dell power edge 2950's with about 50k accounts, running sendmail, cyrus imapd, squirrelmail, sophos puremessage, etc.).</li>				
 				<li>Developed all e-mail policies and procedures currently in use, at the University.</li>
 				<li>Developed integration scripts for automation of account provisioning and self-service. User data taken from SCT Benner (Ellucian) with Oracle backend.</li>
