Ad Word experience at GE

--- a/index.html
+++ b/index.html
@@ -65,9 +65,23 @@
     </div>
     <div id="collapseThree" class="panel-collapse collapse">
       <div class="panel-body">
+	  
+	  <div class="resumeEntry">
+			<div class="workPlace">General Electric Capital Corporation, New Orleans LA</div>
+			<div class="workDuration">Oct 2015 - Present</div>
+			<div class="workTitle">3rd Party Information Security Analyst</div>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 1</li>
+				<li>Item 1</li>
+				<li>Item 1</li>
+				<li>Item 1</li>
+			</ul>
+	    </div>
+	  
 			<div class="resumeEntry">
 			<div class="workPlace">Jackson State University, Jackson MS</div>
-			<div class="workDuration">Mar 2006 - Present</div>
+			<div class="workDuration">Mar 2006 - Oct 2015</div>
 			<div class="workTitle">Database and E-mail Administration</div>
 			<ul>
 				<li>Planed, configured, installed, deployed, supported and managed ORACLE 11, 10, Mysql, MSSQL servers.</li>
