Some edits to professional experience

--- a/index.html
+++ b/index.html
@@ -68,21 +68,18 @@
 	  
 	  <div class="resumeEntry">
 			<div class="workPlace">General Electric Capital Corporation, New Orleans LA</div>
-			<div class="workDuration">Oct 2015 - Present</div>
+			<div class="workDuration">Oct 2014 - Present</div>
 			<div class="workTitle">3rd Party Information Security Analyst</div>
 			<ul>
-				<li>Item 1</li>
-				<li>Item 1</li>
-				<li>Item 1</li>
-				<li>Item 1</li>
-				<li>Item 1</li>
+				<li>Maintain the appropriate level of governance and oversight of the HQ 3rd Party IT Security program.</li>
+				<li>Focus on providing the operational support , through business interaction and metric analytics, to ensure that risks emerging from relationships with 3rd Parties are identified and addressed with the appropriate controls and timely remediation.</li>
 			</ul>
 	    </div>
 	  
 			<div class="resumeEntry">
 			<div class="workPlace">Jackson State University, Jackson MS</div>
-			<div class="workDuration">Mar 2006 - Oct 2015</div>
-			<div class="workTitle">Database and E-mail Administration</div>
+			<div class="workDuration">Mar 2006 - Oct 2014</div>
+			<div class="workTitle">Computer Scientist, E-mail and Database Administration</div>
 			<ul>
 				<li>Planed, configured, installed, deployed, supported and managed ORACLE 11, 10, Mysql, MSSQL servers.</li>
 				<li>Participated in all aspects of SCT BANNER administration and support.</li>
