more edits to pro experience

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 			<div class="workTitle">3rd Party Information Security Analyst</div>
 			<ul>
 				<li>Maintain the appropriate level of governance and oversight of the HQ 3rd Party IT Security program.</li>
-				<li>Focus on providing the operational support , through business interaction and metric analytics, to ensure that risks emerging from relationships with 3rd Parties are identified and addressed with the appropriate controls and timely remediation.</li>
+				<li>Focus on providing operational support.</li>
+				<li>Through business interactions and metric analysis, ensure that risks emerging from relationships with 3rd Parties are identified and addressed with the appropriate controls and timely remediation.</li>
 			</ul>
 	    </div>
 	  
