--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 		
 		<div class="panel-body">
 			<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour-b">
-				JAckson State University,
+				Jackson State University,
 			</a>
 			<div id="collapseFour-b" class="panel-collapse collapse">
 				<ul>
